--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
