--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
+    "next-dark-mode": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
