--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "gridify-datagrid": "^2.0.0",
     "next": "14.1.0",
     "next-dark-mode": "^3.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-responsive": "^9.0.2"
   },
