--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -11,20 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.5",
-    "gridify-datagrid": "^2.0.2",
-    "lucide-react": "^0.331.0",
+    "gridify-datagrid": "^2.0.1",
     "next": "14.1.0",
     "next-dark-mode": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-responsive": "^9.0.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
