--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@mdx-js/rollup": "^3.0.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "gridify-datagrid": "^2.0.1",
     "next": "14.1.0",
     "next-dark-mode": "^3.0.0",
