--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-landing-page",
+  "name": "gridify-landing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -29,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.34",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
