--- a/my-landing-page/package.json
+++ b/my-landing-page/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/rollup": "^3.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "gridify-datagrid": "^2.0.1",
+    "husky": "^9.0.11",
     "next": "14.1.0",
     "next-dark-mode": "^3.0.0",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.34",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
