--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
-    "typescript": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.2.0",
     "eslint-plugin-react": "^7.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4"
   },
   "files": [
     "dist",
