--- a/.prettierrc
+++ b/.prettierrc
@@ -2,13 +2,10 @@
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "semi": true,
   "arrowParens": "always",
   "endOfLine": "auto",
-  "newlineNormalization": true,
-  "chainedMethod": "multi",
-  "eslintIntegration": true,
   "overrides": [
     {
       "files": "*.json",
