--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2018",
+    "target": "ESNext",
     "incremental": true,
     "plugins": [
       {
